tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/string-bs.stderr
TOML parse error at line 1, column 25
  |
1 | string-bs   = "backspace"
  |                         ^
invalid basic string
